[package]
name = "zap-me"
version = "0.2.7"
authors = [
  "Tox",
]
readme = "README.md"
license = "AGPL-3.0"
edition = "2024"

[dependencies]
embedded-hal = { version = "0.2.7", features = ["unproven"] }
fugit = "0.3.7"
heapless = "0.8.0"
typed-builder = "0.21.0"

[dev-dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
rp2040-hal = { version = "0.11.0", features = ["critical-section-impl", "defmt"] }
panic-halt = "1.0.0"
rp2040-boot2 = "0.3.0"
