[package]
name = "zap"
version = "0.1.0"
edition = "2024"

[dependencies]
embedded-hal = { version = "0.2.7", features = ["unproven"] }
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
rp2040-hal = { version = "0.11.0", features = ["critical-section-impl", "defmt"] }
panic-halt = "1.0.0"
rp2040-boot2 = "0.3.0"
zap-me = { path = "../.." }
